# bevy_game

./: Cargo.toml
docs/: Building_hierarchy.md  alien_ai.md  building_diagram.md  damage_dealing_tdd.md  ui_state.md
src/: main.rs
src/aliens/: alien.rs  mod.rs
src/audio/: audio.rs
src/buildings/: building_bundles.rs  building_system.rs  buildings.rs  defensive_buildings.rs  grid.rs  mod.rs  resource_images.rs  resources.rs
src/cameras/: get_world_point_from_screen.rs  mod.rs  orbit_camera.rs  pan_camera.rs  top_down_camera.rs
src/cameras/utils/: mod.rs
src/effects/: effects.rs  firework.rs  gun_idle_animations.rs  mod.rs  muzzleflash.rs  muzzleflash_depr.rs  relative_lenses.rs
src/game_timer/: game_timer.rs  mod.rs
src/health/: health.rs
src/main_base/: main_base.rs  mod.rs
src/map/: map.rs
src/menu/: menu.rs
src/ui/: building_info.rs  error_info.rs  mod.rs  ui.rs
src/velocity/: collisions.rs  mod.rs  velocity.rs
