[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
bevy_hanabi = { version = "0.5.3", default-features = false, features = [ "3d" ] }
bevy_embedded_assets = "0.6"
bevy_tweening = "0.6"
bevy_kira_audio ="0.14"
bevy_egui = "0.19"
bevy_rapier3d = "0.20.0"
egui = "0.21.0"
itertools = "0.10.5"
# bevy_particle_systems = "0.4"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
